# atp-knowledge-studio

./: .env.example  .gitignore  AGENTS.md  ATP_PROJECT_STATUS_HANDOFF_4E_CURRENT.md  ATP_PROJECT_STATUS_HANDOFF_4F_CURRENT.md  ATP_PROJECT_STATUS_HANDOFF_4H_CURRENT.md  README.md  TODO.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
docs/: ATP_Knowledge_Studio_PRD_v0_1.docx  ATP_Knowledge_Studio_Project_Summary_v0_1.docx  ATP_PRODUCT_REQUIREMENTS_V1.docx  ATP_PRODUCT_REQUIREMENTS_V1.md  ATP_TECHNICAL_DEBT_AND_ARCHITECTURE_DECISIONS_V1.docx  ATP_TECHNICAL_SPECIFICATION_V1.docx  README.md
docs/architecture/: AI_API_INTEGRATION_PREFLIGHT_4G0.md  AI_ENHANCEMENT_REQUEST_PACKAGE_4G1.md  AI_OUTPUT_VALIDATION_GATE_4G3.md  (+126 more)
prompts/: sprint-0-inspection.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_init_source_document_root.sql  002_add_source_cards.sql  003_add_marketing_tags.sql  004_add_knowledge_cards.sql  005_add_draft_artifacts.sql  006_add_source_card_bibliographic_metadata.sql  007_add_source_card_apa_reference_reviews.sql  008_add_batch_research_intake_jobs.sql  009_add_suggested_metadata_corrections.sql  010_add_metadata_correction_audit_events.sql  011_expand_metadata_correction_audit_preflight_events.sql  012_add_metadata_correction_structured_apply_events.sql  013_add_intake_source_document_audit_events.sql  014_add_sourcecard_metadata_reviews.sql  015_add_source_sections_content_chunks.sql  016_add_knowledge_units.sql
src-tauri/src/: docx_export.rs  lib.rs  main.rs  vault_db.rs
(+157 files in other folders)
