[package]
name = "atp-knowledge-studio"
version = "0.1.0"
description = "ATP Knowledge Studio desktop app"
authors = ["ATP Knowledge Studio"]
edition = "2021"

[lib]
name = "atp_knowledge_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }
quick-xml = "0.40.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
